Added some meta tags to index.html
modified index.html file!

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
+<meta charset = "UTF-8">
+<meta name = "viewport" content = "width = divice-width, initial-scale = 1">
 </head>
 <body>
 
@@ -13,6 +15,7 @@ style="width:100%;max-width:640px"></div>
 <p>This line is here to show how merging works.</p>
 <p>A new line in our file!</p>
 <div><img src="Stema Romaniei.png" alt="Stema Romaniei" style="width:100%;max-width:640px"></div>
+<p>Am adaugat aici inca o linie de cod pentru cateva teste</p>
 
 </body>
 </html>
